@@ -1,4 +1,4 @@
 // the configured options and settings
 #define LAB3D_VERSION_MAJOR 4
 #define LAB3D_VERSION_MINOR 1
-#define LAB3D_VERSION_PATCH 4
+#define LAB3D_VERSION_PATCH 5
