@@ -1,5 +1,6 @@
 4.1.5: 2023-02-03
 * Fix the broken input configuration menu
+* New setting for enabling/disabling vertical movement with the mouse. Disabled by default.
 
 4.1.4: 2023-08-27
 * Update SDL
